o11y-k8s-setup-template/victoriametrics/templates/vm-select.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-select-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - vm.k8s.opstree.dev
      secretName: ssl-cert
  rules:
  - host: "vm.k8s.opstree.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vmselect-vm
            port:
              number: 8481
